--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.0",
+    "firebase": "^6.5.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-quill": "^1.3.3",
     "react-scripts": "3.1.1"
   },
   "scripts": {
